src/scss/main.scss
// Colors
$colors: (
    bgColor: #000026,
    textColor: #00ecf0,
    highlightColor: #f0f0f0
);

@function color($colorName) {
    @return map-get($colors, $colorName);
}

// Fonts
$textLight: "Montserrat Light";
$text: "Montserrat Regular";
$highlighted: "Montserrat Medium";
$textSemiBold: "Montserrat SemiBold";
$title: "Montserrat Black";

// Custom values
$center: translate(-50%, -50%);

// Querries for responsiveness
$responsive1920: 1920px;
$arrowsBreakPoint: 1300px;
$arrowsDisappear: 700px;
$responsive600: 600px;
$responsive550: 550px;
$responsive400: 400px;
$responsive350: 350px;

@mixin arrowsBreakPoint {
    @media (max-width: #{$arrowsBreakPoint}) {
        @content;
    }
}

@mixin arrowsDisappear {
    @media (max-width: #{$arrowsDisappear}) {
        @content;
    }
}

@mixin responsive1920 {
    @media (min-width: #{$responsive1920}) {
        @content;
    }
}

@mixin responsiveTablets {
    @media (max-width: 1024px) {
        @content;
    }
}

@mixin responsive600 {
    @media (max-width: #{$responsive600}) {
        @content;
    }
}

@mixin responsive550 {
    @media (max-width: #{$responsive550}) {
        @content;
    }
}


@mixin responsive400 {
    @media (max-width: #{$responsive400}) {
        @content;
    }
}

@mixin responsive350 {
    @media (max-width: #{$responsive350}) {
        @content;
    }
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: color(bgColor);
    color: color(textColor);
    font-family: $text;
    overflow: hidden;

    // QUOTE
    #quote {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: $center;
        font-family: $textLight;
        font-size: 14px;
        opacity: 0;
        text-align: center;
        width: 100%;
        animation: quoteText 3s ease forwards;

        .highlighted {
            font-family: $textLight;
        }

        @include responsive1920 {
            font-size: 26px;
        }
    }

    // Links
    a {
        text-decoration: none;
        color: color(textColor);
        background-color: color(bgColor);
        transition: 0.2s ease;
    }
    a:hover {
        color: color(highlightColor);
    }

    img {
        transition: 0.3s ease;
    }

    // Link buttons
    .btn-link {
        width: 110px;
        height: 30px;
        padding: 3px;
        border: 1px solid color(textColor);
        border-radius: 1px;
        font-size: 14px;

        display: flex;
        justify-content: center;
        align-items: center;

        * {
            margin: 0px 5px;
        }
    }

    // List items
    ul {
        list-style-type: none;
        display: flex;

        li {
            margin: 0 5px;
            padding: 3px;
        }
    }

    // Highlighted items
    .highlighted {
        color: color(highlightColor);
        font-family: $highlighted;
    }

    
    @include responsive1920 {
        p, a {
            font-size: 22px;
        }

        .btn-link {
            width: 140px;
            font-size: 20px;
        }

        input, textarea, #submitBtn {
            font-size: 18px;
        }
    }
}

// NAVIGATION (LINKS)
nav {
    display: none;
    justify-content: flex-end;
    align-items: center;
    padding: 10px;
    margin-right: 25px;
    transform: translateY(-50px);
    opacity: 0;
    z-index: 2;
    transition: 3s ease;

    a {
        background: none;
    }

    @include responsive550 {
        justify-content: center;
        margin: 0;
    }
}

nav.display__nav {
    display: flex;
}

nav.active__nav {
    transform: translateY(0px);
    opacity: 1;
}

// CONTAINER FOR THE SECTIONS
#container {
    display:flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    opacity: 0;
    transition: 1.5s ease;
}

#container.active__container {
    opacity: 1;
}
/* ... */

